# pointcloud_utils

./: CMakeLists.txt  package.xml
cfg/: pointcloud_utils.cfg
config/conversion/: cloud_combiner.yaml
config/io/: pointcloud_saver.yaml
config/processing/: grid_ground_processor.yaml  ground_processor.yaml
include/pointcloud_utils/: pointcloud_grid_parser.hpp  pointcloud_grid_parser_impl.hpp  pointcloud_utils.hpp  pointcloud_utils_impl.hpp
include/pointcloud_utils/conversion/: pointcloud_from_bag.hpp  pointcloud_grid_parser.hpp  pointcloud_grid_parser_impl.hpp  pointcloud_stamper.hpp  pointcloud_to_laserscan.hpp  pointcloud_transformer.hpp
include/pointcloud_utils/io/: frame_conversions.h  pointcloud_mapper.hpp  pointcloud_saver.hpp
include/pointcloud_utils/processing/: ground_processor.hpp  ground_processor_impl.hpp  intensity_filter.hpp  plane_parser.hpp  plane_parser_impl.hpp
include/pointcloud_utils/test/: test.hpp  test_impl.hpp
launch/: distance_publisher.launch  file_rename.launch  fp_grid_parser.launch  fp_pointcloud_point_saver.launch  image_saver.launch  lidar_calibration4.launch  lidar_to_laserscan.launch  pc_grid_parser.launch  pointcloud_point_saver.launch  pointcloud_saver.launch  pointcloud_to_image_pub_save_py.launch  points_republish.launch  shell_grid_parser.launch
launch/conversion/: cloud_combiner.launch.py  fp_grid_parser.launch  fp_grid_parser_edge_detection.launch  pc_grid_parser.launch  shell_grid_parser.launch  shell_python_grid_parser.launch
launch/conversion/old_launch/: fp_grid_parser.launch  lidar_to_laserscan.launch
launch/io/: cloud_stamper.launch  file_rename.launch  image_saver.launch  pointcloud_saver.launch  pointcloud_saver.launch.py  points_republish.launch
launch/oddball/: lidar_calibration2.launch
launch/processing/: ground_processor.launch  ground_processor.launch.py  intensity_filter.launch  plane_parser_trailer.launch
launch/processing/old_launch/: plane_parser_trailer.launch
launch/test/: cloud_reader.launch.py  cloud_stamper.launch  distance_publisher.launch  distance_publisher.launch.py  plane_points_publisher.launch  point_order_printer.launch.py  ring_splitter.launch.py
launch/test/old_launch/: lidar_calibration3.launch  radar_calibration.launch  xsens_euler_pub.launch
mkz_scan_points/: points_1.csv  points_10.csv  points_100.csv  points_1000.csv  points_1001.csv  points_1002.csv  points_1003.csv  points_1004.csv  points_1005.csv  points_1006.csv  points_1007.csv  points_1008.csv  points_1009.csv  points_101.csv  points_1010.csv  points_1011.csv  points_1012.csv  points_1013.csv  points_1014.csv  points_1015.csv  points_1016.csv  points_1017.csv  points_1018.csv  points_1019.csv  points_102.csv  points_1020.csv  points_1021.csv  points_1022.csv  points_1023.csv  points_1024.csv  points_1025.csv  points_1026.csv  points_1027.csv  points_1028.csv  points_1029.csv  points_103.csv  points_1030.csv  points_1031.csv  points_1032.csv  points_1033.csv  (+1291 more)
pointcloud_utils/: CMakeLists.txt  package.xml
pointcloud_utils/include/pointcloud_utils/: pointcloud_grid_parser.hpp  pointcloud_grid_parser_impl.hpp  pointcloud_saver.hpp  pointcloud_utils.hpp
pointcloud_utils/launch/: ground_error_counter.launch  lidar_calibration.launch  lidar_to_laserscan.launch  pc_grid_parser.launch  pc_saver.launch  shell_grid_parser.launch  shell_grid_parser_old.launch  shell_lidar_calibration.launch  shell_python_grid_parser.launch
pointcloud_utils/points/: points_0.csv  points_1.csv  points_10.csv  points_100.csv  points_101.csv  points_102.csv  points_103.csv  points_104.csv  points_105.csv  points_106.csv  points_107.csv  points_108.csv  points_109.csv  points_11.csv  points_110.csv  points_111.csv  points_112.csv  points_113.csv  points_114.csv  points_115.csv  points_116.csv  points_117.csv  points_118.csv  points_119.csv  points_12.csv  points_120.csv  points_121.csv  points_122.csv  points_123.csv  points_124.csv  points_125.csv  points_126.csv  points_127.csv  points_128.csv  points_129.csv  points_13.csv  points_130.csv  points_131.csv  points_132.csv  points_133.csv  (+216 more)
pointcloud_utils/src/: ground_error_detector (failed).cpp  ground_error_detector.cpp  pointcloud_grid_parser.cpp  pointcloud_grid_parser_node (old).cpp  pointcloud_grid_parser_node.cpp  pointcloud_grid_parser_template.cpp  pointcloud_to_laserscan.cpp  shell_pointcloud_grid_parser.cpp
pointcloud_utils/src/scripts/: point_cloud_2_to_png.py
src/: bag_parser.cpp  distance_marker_publisher.cpp  pointcloud_grid_parser_node.cpp  pointcloud_saver.cpp  pointcloud_saver_node.cpp
src/conversion/: pointcloud_combiner_node3.cpp  pointcloud_grid_parser.cpp  pointcloud_grid_parser_node.cpp  pointcloud_to_laserscan.cpp  pointcloud_to_laserscan_node.cpp  pointcloud_transformer.cpp  pointcloud_transformer_node.cpp
src/io/: bag_parser.cpp  frame_conversions.cpp  pointcloud_mapper.cpp  pointcloud_mapper_node.cpp  pointcloud_saver.cpp  pointcloud_saver_node.cpp
src/io/old/: CMakeLists_old.txt  package_old.xml  pointcloud2_to_mesh.cpp
src/oddball/: README.txt
src/processing/: grid_ground_removal_node.cpp  ground_error_detector.cpp  ground_processor.cpp  ground_removal_and_alignment_node.cpp  intensity_filter.cpp  intensity_filter_node.cpp  plane_parser.cpp  plane_parser_node.cpp  scanline_processor_node.cpp
src/scripts/: add_time_stamp.py  img_saver.py  leader_points_rename.py  point_cloud_2_to_png.py  point_cloud_point_saver.py  points_playback.py
src/scripts/innoviz/: innoviz_file_list.txt
src/scripts/points/: file_list.txt  innoviz_points_0_1593015858598026514.xyz  innoviz_points_1593015861405323735.xyz  innoviz_points_1593015861685056066.xyz  innoviz_points_1593015861912908316.xyz  innoviz_points_1593015862161981653.xyz  innoviz_points_1593015862391387892.xyz  innoviz_points_1593015862648913635.xyz  innoviz_points_1_1593015858692161321.xyz  (+1 more)
src/test/: cloud_reader.cpp  distance_marker_publisher (copy).cpp  distance_marker_publisher.cpp  imu_to_euler.cpp  plane_points_generator.cpp  point_order_printer.cpp  ring_splitter.cpp  test.cpp  test_node.cpp
(+5 files in other folders)
