<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_utils</name>
  <version>0.0.0</version>
  <description>The pointcloud_utils package</description>
  <maintainer email="swmeyer16@gmail.com">stephanie</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <depend>rclcpp</depend>
  <depend>launch_xml</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>  
  <depend>tf2</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>atr_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>rosbag</depend> -->
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
